test/integration/bad/data_index/non_data_index6.stan
parameters {
  array[3] real y;

}
transformed parameters {
  simplex[size(y)] z;
}
